--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>jQuery tagMatch plugin</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-		<script src="../src/jquery.boilerplate.js"></script>
+		<script src="../src/jquery.tagmatch.js"></script>
 	</head>
 	<body>
 		<div id="element"></div>
