--- a/tests/index.html
+++ b/tests/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>QUnit Example</title>
+		<title>QUnit Test for TagMatch jQuery Plugin</title>
 		<link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.14.0.css">
 	</head>
 	<body>
